Fix .asLong() with big numbers, allow .asDate() and .asDatetime with any kind of Number, SQLFunctuionsTest doesn't fail after first error